--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-12.42MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.21MB/s(Youtube:不良林), server: 134.195.196.150, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-10.43MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.08MB/s(Youtube:不良林), server: 134.195.196.150, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-8.17MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.23MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.60MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.08MB/s(Youtube:不良林), server: 134.195.196.150, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇸🇬 新加坡-2.11MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.90MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.10MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.23MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.79MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.08MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-12.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
