--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-14.01MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.56MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.40MB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 44041, type: ss, cipher: chacha20-ietf-poly1305, password: 297545c2-a59d-4610-9580-a7baa3657a57}
-  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.53MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.01MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-958.4KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.82MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.96MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-672.2KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-669.6KB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-958.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-672.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-669.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
